--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="utf-8" />
 		<title>Ai Training</title>
@@ -7,63 +8,127 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- import the webpage's stylesheet -->
-		<link rel="stylesheet" href="/static/index.css" />
+		<link rel="stylesheet" href="/static/styles/index.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;0,800;1,400&display=swap"
+			rel="stylesheet">
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+			integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+			crossorigin="anonymous" />
 	</head>
 
 	<body>
-		<h1>Ai Training</h1>
-		<button id="requestPortButton">Request Port</button>
-		<span id="connectPort">
-			<hr />
-			<button id="openPortButton">Open Port to Microbit</button>
-			<hr />
-			<span id="openPort">
-				<button id="readButton">Read Input from Microbit</button>
+		<div class="init-hide-imp nav">
+			<a href="/">
+				<p>AI ROBOT BOOK</p>
+			</a>
+			<p class="projectName">Model Project</p>
+		</div>
+
+		<div id="page-1">
+			<h1 class="title">AI ROBOT BOOK</h1>
+			<p class="sub-title">Add some artificial intelligence to your robot projects!</p>
+			<div class="models">
+				<div class="model">
+					<button onclick="pickModel('IMAGE MODEL')" class="gradient-border">
+						<i class="fas fa-camera"></i>
+					</button>
+					<h2>IMAGE PROJECT</h2>
+				</div>
+				<div class="model">
+					<button onclick="pickModel('AUDIO MODEL')"><i class="fas fa-volume-up"></i></button>
+					<h2>AUDIO PROJECT</h2>
+				</div>
+				<div class="model">
+					<button onclick="pickModel('POSE MODEL')"><i class="fas fa-running"></i></button>
+					<h2>POSE PROJECT</h2>
+				</div>
+			</div>
+		</div>
+
+		<div id="page-2" class="init-hide">
+			<div class="page-container">
+				<button id="requestPortButton">
+					<h1>Pair Microbit</h1>
+				</button>
+				<p class="sub-title">Select the Microbit in the popup screen. Psst, it might be called "mbed Serial
+					Port"
+				</p>
+			</div>
+		</div>
+		<div id="page-3" class="init-hide">
+			<span id="connectPort">
+				<!-- <button id="openPortButton">Open Microbit Connection</button>
 				<hr />
-				<button id="testButton">Test Microbit Connection</button>
-				<hr />
-				<button id="closeButton">Close Port</button>
-				<hr />
+				<span id="openPort">
+					<button id="readButton">Read Input from Microbit</button>
+					<hr />
+					<button id="testButton">Test Microbit Connection</button>
+					<hr />
+					<button id="closeButton">Close Port</button>
+					<hr />
+				</span> -->
+				<p class="sub-title">Enter the URL from your Google Teachable Machine Model:</p>
+				<span class='input-container'>
+					<input id="teachableUrl" type="url"
+						placeholder="https://teachablemachine.withgoogle.com/models/[...]" pattern="https://.*"
+						required />
+					<button id="submitUrl">Submit URL</button>
+				</span>
 			</span>
-			<input id="teachableUrl" type="url" placeholder="https://teachablemachine.withgoogle.com/models/[...]" pattern="https://.*" required />
-			<button id="submitUrl" onclick="submitUrl()">Submit URL</button>
-			<hr />
+		</div>
+		<div id="page-4" class="init-hide">
+			<div class='page-container'>
+				<div class="display">
+					<h1>AI ROBOT BOOK</h1>
+					<span class='undercard'>
+						<p class="projectName">Model Project</p>
+					</span>
+					<a href="/" class='restart-button'>
+						<button>Restart</button>
+					</a>
+					<button id="startButton">Start!</button>
+					<div id='results' class='init-hide-imp'>
+						<h2>RESULTS!</h2>
+						<div id="label-container"></div>
+					</div>
+				</div>
+				<div>
+					<div id="webcam-container" class='webcam-container'></div>
+					<div class='webcam-container'><canvas id="canvas"></canvas></div>
+					<div id="audio-container" class="webcam-container"><i class='fas fa-volume-up'></i></div>
+				</div>
+			</div>
+		</div>
 
-			<div>Teachable Machine</div>
-			<button id="startButton">Start!</button>
-			<div id="webcam-container"></div>
-			<canvas id="canvas"></canvas>
-
-			<div id="label-container"></div>
-		</span>
 		<!-- glitch button and style -->
 		<div class="glitchButton" style="position: fixed; top: 80px; right: 20px"></div>
 		<script src="https://button.glitch.me/button.js" data-style="glitch"></script>
 		<!-- Socket.io -->
-		<script
-			src="https://cdn.socket.io/3.1.3/socket.io.min.js"
+		<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
 			integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
-			crossorigin="anonymous"
-		></script>
+			crossorigin="anonymous"></script>
 		<!-- Teachable Machine: tensorflow-->
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 		<!-- Teachable Machine: Image Recognition-->
-		<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-		<!-- Teachable Machine: Audio Recognition-->
-		<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@0.4.0/dist/speech-commands.min.js"></script>
-		<!-- Teachable Machine: Pose Recognition-->
-		<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-		<!-- Jquery -->
 		<script
-			src="https://code.jquery.com/jquery-3.6.0.slim.js"
-			integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-			crossorigin="anonymous"
-		></script>
+			src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+		<!-- Teachable Machine: Audio Recognition-->
+		<script
+			src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@0.4.0/dist/speech-commands.min.js"></script>
+		<!-- Teachable Machine: Pose Recognition-->
+		<script
+			src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+		<!-- Jquery -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+			integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<!-- Main Scripts-->
-		<script src="/static/scripts/index.js" type="text/javascript"></script>
+		<script src="/static/index.js" type="text/javascript"></script>
 		<script src="/static/scripts/serialConnection.js" type="text/javascript"></script>
 		<script src="/static/scripts/imageRec.js" type="text/javascript"></script>
 		<script src="/static/scripts/audioRec.js" type="text/javascript"></script>
 		<script src="/static/scripts/poseRec.js" type="text/javascript"></script>
 	</body>
+
 </html>
