--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 		<!-- import the webpage's stylesheet -->
 		<link rel="stylesheet" href="/static/styles/index.css" />
+		<script src="https://button.glitch.me/button.js" data-style="glitch"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;0,800;1,400&display=swap"
@@ -88,6 +89,14 @@
 					<a href="/" class='restart-button'>
 						<button>Restart</button>
 					</a>
+					<span id='contContainer'>
+						<h3 id='contLabel'>Discontinous</h3>
+						<label class="switch">
+							<input type="checkbox" id='contToggle'>
+							<span class="slider round"></span>
+						</label>
+					</span>
+
 					<button id="startButton">Start!</button>
 					<div id='results' class='init-hide-imp'>
 						<h2>RESULTS!</h2>
@@ -104,8 +113,7 @@
 
 		<!-- glitch button and style -->
 		<div class="glitchButton" style="position: fixed; top: 150px; right: 20px"></div>
-		<script src="https://button.glitch.me/button.js" data-style="glitch"></script>
-    <!-- Socket.io -->
+		<!-- Socket.io -->
 		<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
 			integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
 			crossorigin="anonymous"></script>
